@@ -21,25 +21,34 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import java.util.*;
 
-
+//TODO implement DI and test id generation
 public class EventTest {
 
     private Event event;
-    private List<Participant> list;
+    private Event event1;
+    private Event event2;
+    List<Participant> participantList;
+    List<Expense> expenseList;
 
     @BeforeEach
     void setUp() {
-        list = new ArrayList<>();
-        list.add(new Participant());
-        event = new Event("Test Event", new ArrayList<>());
+        participantList = new ArrayList<>();
+        participantList.add(new Participant());
+        expenseList = new ArrayList<>();
+        expenseList.add(new Expense());
+        event = new Event("Test Event", new ArrayList<>(), null);
+        event1 = new Event("Title", List.of(new Participant("Person1", "p1"),
+                new Participant("Person2", "p2")), null);
+        event2 = new Event("Title", List.of(new Participant("Person1", "p1"),
+                new Participant("Person2", "p2")), null);
     }
 
     @Test
     void testConstructor() {
         String title = "Test Event";
-        List<Participant> participants = new ArrayList<>();
-        participants.add(new Participant());
-        Event event = new Event(title, participants);
+        List<Participant> participants = Arrays.asList(new Participant("Person1", "p1"),
+                new Participant("Person2", "p2"));
+        Event event = new Event(title, participants, null);
         assertEquals(title, event.getTitle());
         assertEquals(participants.size(), event.getParticipants().size());
         assertTrue(event.getParticipants().containsAll(participants));
@@ -49,7 +58,7 @@ public class EventTest {
     @Test
     void testConstructorNullParticipants() {
         String title = "Test Event";
-        Event event = new Event(title, null);
+        Event event = new Event(title, null, null);
         assertNotNull(event);
         assertEquals(title, event.getTitle());
         assertNotNull(event.getParticipants());
@@ -60,7 +69,8 @@ public class EventTest {
 
     @Test
     void testCreationDate() {
-        Event event = new Event("Test Event", list);
+        Event event = new Event("Test Event", List.of(
+                new Participant("John Doe", "jd")), null);
         assertNotNull(event.getCreationDate());
         assertTrue(event.getCreationDate().getTime() <= System.currentTimeMillis());
     }
@@ -68,14 +78,14 @@ public class EventTest {
     @Test
     public void EventGetterTest(){
         String title = "title";
-        Event test = new Event(title, null);
+        Event test = new Event(title, null, null);
         assertEquals("title", test.getTitle());
     }
 
     @Test
     public void EventSetterTest(){
         String title = "title";
-        Event test = new Event(title, null);
+        Event test = new Event(title, null, null);
         assertEquals("title", test.getTitle());
         test.setTitle("newTitle");
         assertEquals("newTitle", test.getTitle());
@@ -83,95 +93,122 @@ public class EventTest {
 
     @Test
     void testSameInstance() {
-        Event event = new Event("Title", list);
-        Event event1;
-        event1 = event;
-        assertEquals(event1, event);
+        Event testEvent = event;
+        assertEquals(testEvent, event);
     }
 
     @Test
     void testDifferentInstance() {
-        Event event1 = new Event("Title", list);
-        Event event2 = new Event("Title", list);
+        Event event1 = new Event("Title", participantList, null);
+        Event event2 = new Event("Title", participantList, null);
         assertEquals(event1, event2);
     }
 
     @Test
     void testEqualityWithoutId(){
-        Event event1 = new Event("Title", list);
-        Event event2 = new Event("Title", list);
         assertEquals(event1.getTitle(), event2.getTitle());
         assertEquals(event1.getParticipants().size(), event2.getParticipants().size());
         for(int i = 0; i < event1.getParticipants().size(); i++){
             assertEquals(event1.getParticipants().get(i), event2.getParticipants().get(i));
         }
     }
-
-
     @Test
     void testNull() {
-        Event event = new Event("Title", list);
         assertNotEquals(null, event);
     }
 
     @Test
     void testEqualityDifferentClass() {
-        Event event = new Event("Title", list);
         Object other = new Object();
         assertNotEquals(event, other);
     }
 
     @Test
     void testHashConsistency() {
-        Event event1 = new Event("Title", list);
-        Event event2 = new Event("Title", list);
-        assertEquals(event1.hashCode(), event2.hashCode()); // should be equal due to unique ID not
-        // taken into consideration
+        assertEquals(event1.hashCode(), event2.hashCode());
+        // should be equal due to unique ID not taken into consideration
         //can later be tested differently when object persistence is implemented with a database
     }
 
     @Test
     void addingParticipantTest() {
-        Participant participant = new Participant();
+        Participant participant = new Participant("Person123", "test123");
         event.addParticipant(participant);
-        assertEquals(event.getParticipants().get(0), participant);
+        assertEquals(event.getParticipants().getFirst(), participant);
     }
 
     @Test
     void settingParticipantTest(){
         List<Participant> testList = new ArrayList<>();
-        testList.add(new Participant());
-        testList.add(new Participant());
-        testList.add(new Participant());
-        testList.add(new Participant());
-        Event event1 = new Event("title", null);
+        for(int i = 0; i<4; i++){
+            testList.add(new Participant("Person"+i, "test"+i));
+        }
+        Event event1 = new Event("title", null, null);
         event1.setParticipants(testList);
-        Event event2 = new Event("title", testList);
+        Event event2 = new Event("title", testList, null);
         assertEquals(event1.getParticipants(), event2.getParticipants());
     }
 
     @Test
     void testDeleteParticipant() {
-        Participant participant = new Participant();
+        Participant participant = new Participant("Person", "test");
         event.addParticipant(participant);
         assertTrue(event.deleteParticipant(participant));
         assertFalse(event.getParticipants().contains(participant));
     }
 
     @Test
+    void addingExpenseTest() {
+        Participant author = new Participant("test", "test");
+        Expense expense  = new Expense(author, "test", 2.0, "EUR",
+                new ArrayList<>(), "test");
+        event.addExpense(expense);
+        assertEquals(event.getExpenses().getFirst(), expense);
+    }
+
+    @Test
+    void settingExpenseTest(){
+        List<Expense> testList = new ArrayList<>();
+        Participant author = new Participant("test", "test");
+        for(int i = 0; i<4; i++){
+            testList.add(new Expense(author, "test" + i, 2.0, "EUR",
+                    new ArrayList<>(), "test" + i));
+        }
+        Event event1 = new Event("title", null, null);
+        event1.setExpenses(testList);
+        Event event2 = new Event("title", null, testList);
+        assertEquals(event1.getExpenses(), event2.getExpenses());
+    }
+
+    @Test
+    void testExpenseParticipant() {
+        Participant author = new Participant("test", "test");
+        Expense expense  = new Expense(author, "test", 2.0, "EUR",
+                new ArrayList<>(), "test");
+        event.addExpense(expense);
+        assertTrue(event.deleteExpense(expense));
+        assertFalse(event.getExpenses().contains(expense));
+    }
+
+    @Test
     void testDeleteNothing() {
-        Participant participant = new Participant();
-        event.deleteParticipant(participant);
-        assertFalse(event.getParticipants().contains(participant));
+        Participant author = new Participant("test", "test");
+        Expense expense  = new Expense(author, "test", 2.0, "EUR",
+                new ArrayList<>(), "test");
+        assertFalse(event.deleteExpense(expense));
+        assertFalse(event.getExpenses().contains(expense));
     }
 
     @Test
     void testParticipantList() {
-        Participant participant1 = new Participant();
-        Participant participant2 = new Participant();
-        event.addParticipant(participant1);
-        event.addParticipant(participant2);
-        event.deleteParticipant(participant1);
-        assertTrue(event.getParticipants().contains(participant2) && event.getParticipants().size() == 1);
+        Participant author = new Participant("test", "test");
+        Expense expense1  = new Expense(author, "test", 2.0, "EUR",
+                new ArrayList<>(), "test");
+        Expense expense2  = new Expense(author, "test", 2.0, "EUR",
+                new ArrayList<>(), "test");
+        event.addExpense(expense1);
+        event.addExpense(expense2);
+        event.deleteExpense(expense1);
+        assertTrue(event.getExpenses().contains(expense2) && event.getExpenses().size() == 1);
     }
 }
